--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-pandas>=1.3.0
-numpy>=1.20.0
-scikit-learn>=1.0.0
-joblib>=1.1.0
-matplotlib>=3.4.0
-seaborn>=0.11.0
-python-dotenv>=0.19.0
-tqdm>=4.62.0 
+pandas==1.5.3
+numpy==1.24.3
+scikit-learn==1.2.2
+joblib==1.2.0
+matplotlib==3.7.1
+seaborn==0.12.2
+tqdm==4.65.0
+python-dotenv==1.0.0
