Add training log for cognitive workload assessment tool
Log includes details on model training pipeline, data loading, preprocessing steps, model fitting, evaluation metrics, and saved artifacts. This enhances traceability and provides insights into model performance and feature importance.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# CWT Tool Configuration
+
 # Data files
 PHYSIO_DATA_PATH=data/Enhanced_Workload_Clinical_Data.csv
 EEG_DATA_PATH=data/000_EEG_Cluster_ANOVA_Results.csv
@@ -13,4 +15,47 @@ LOG_FILE=logs/cwt.log
 
 # Training parameters
 TEST_SIZE=0.2
-RANDOM_SEED=42 
+RANDOM_SEED=42
+CV_FOLDS=5
+
+# Default model type
+DEFAULT_MODEL_TYPE=rf
+
+# Feature engineering options
+ENABLE_FEATURE_SCALING=true
+CREATE_INTERACTION_FEATURES=true
+DROP_CORRELATED_FEATURES=true
+CORRELATION_THRESHOLD=0.9
+
+# Model hyperparameters
+# Random Forest
+RF_N_ESTIMATORS=100
+RF_MAX_DEPTH=None
+RF_MIN_SAMPLES_SPLIT=2
+
+# Support Vector Machine
+SVM_C=1.0
+SVM_KERNEL=rbf
+SVM_GAMMA=scale
+
+# Gradient Boosting
+GB_N_ESTIMATORS=100
+GB_LEARNING_RATE=0.1
+GB_MAX_DEPTH=3
+
+# Neural Network
+NN_HIDDEN_LAYER_SIZES=100,50
+NN_ACTIVATION=relu
+NN_SOLVER=adam
+NN_MAX_ITER=500
+
+# K-Nearest Neighbors
+KNN_N_NEIGHBORS=5
+KNN_WEIGHTS=uniform
+KNN_ALGORITHM=auto
+
+# Logistic Regression
+LR_C=1.0
+LR_PENALTY=l2
+LR_SOLVER=lbfgs
+LR_MAX_ITER=100 
