--- a/.env
+++ b/.env
@@ -4,24 +4,16 @@ EEG_DATA_PATH=data/000_EEG_Cluster_ANOVA_Results.csv
 GAZE_DATA_PATH=data/008_01.csv
 
 # Model configuration
-MODEL_OUTPUT_DIR=models
+MODEL_OUTPUT_DIR=models/sample/default
 MODEL_NAME=Cognitive_State_Prediction_Model
 
 # Logging configuration
 LOG_LEVEL=INFO
-LOG_FILE=logs/cwt.log
+LOG_FILE=logs/general/cwt.log
 
 # Training parameters
 TEST_SIZE=0.2
 RANDOM_SEED=42
 
 # Default model type
-DEFAULT_MODEL_TYPE=rf
-
-# Logging configuration
-LOG_LEVEL=INFO
-LOG_FILE=logs/cwt.log
-
-# Training parameters
-TEST_SIZE=0.2
-RANDOM_SEED=42 
+DEFAULT_MODEL_TYPE=rf 
