Refactor model output and logging configurations for improved organization
This commit updates the model output directory structure to better categorize models by type, specifically under 'models/sample/default' for default models and 'models/advanced' for advanced models. It also modifies logging configurations to direct logs to specific subdirectories, enhancing log management. Additionally, the README.md is updated to reflect these changes, providing clearer instructions for model usage and organization. The preprocessing and training functions are adjusted to accommodate the new directory structure, ensuring compatibility with the updated logging and model saving processes.

--- a/.env.example
+++ b/.env.example
@@ -6,12 +6,12 @@ EEG_DATA_PATH=data/000_EEG_Cluster_ANOVA_Results.csv
 GAZE_DATA_PATH=data/008_01.csv
 
 # Model configuration
-MODEL_OUTPUT_DIR=models
+MODEL_OUTPUT_DIR=models/sample/default
 MODEL_NAME=Cognitive_State_Prediction_Model
 
 # Logging configuration
 LOG_LEVEL=INFO
-LOG_FILE=logs/cwt.log
+LOG_FILE=logs/general/cwt.log
 
 # Training parameters
 TEST_SIZE=0.2
