--- a/.github/workflows/test-models.yml
+++ b/.github/workflows/test-models.yml
@@ -26,17 +26,40 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest pytest-cov numpy joblib scikit-learn
+        pip install pytest pytest-cov pytest-harvest numpy joblib scikit-learn
+        pip install torch tensorflow transformers
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
     - name: Create necessary directories
       run: |
         mkdir -p logs/installation
         mkdir -p models/advanced
+        mkdir -p models/deep_learning
+        mkdir -p models/huggingface
     
-    - name: Run tests
+    - name: Run utility tests
       run: |
-        pytest tests/utilities/test_download_advanced_models.py tests/models/test_advanced_models.py -v --cov=utilities --cov-report=xml
+        pytest tests/utilities/test_download_advanced_models.py -v --cov=utilities
+    
+    - name: Run traditional ML model tests
+      run: |
+        pytest tests/models/test_advanced_models.py -v --cov=models
+    
+    - name: Run deep learning model tests
+      run: |
+        pytest tests/models/test_deep_learning_models.py -v --cov=models
+    
+    - name: Run transformer model tests
+      run: |
+        pytest tests/models/test_huggingface_models.py -v --cov=models
+    
+    - name: Run integration tests
+      run: |
+        pytest tests/integration/test_model_workflow.py -v --cov=.
+    
+    - name: Generate coverage report
+      run: |
+        pytest --cov=. --cov-report=xml
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
